--- a/src/posts/2022-03-26-Social-Share-Buttons/post.mdx
+++ b/src/posts/2022-03-26-Social-Share-Buttons/post.mdx
@@ -166,7 +166,7 @@ const PostTemplate = ({ data, pageContext }) => {
           />
           <div className='post-info'>
             <h1>{title}</h1>
-            {tags?.length > 0 ? <TagsList tags={tags} isPost={true} /> : ''}
+            {tags?.length > 0 && <TagsList tags={tags} isPost={true} />}
             <p>{date}</p>
             <div className='underline' />
             <div className='social-buttons-top'>
