--- a/src/posts/16-post-number-sixteen/post.mdx
+++ b/src/posts/16-post-number-sixteen/post.mdx
@@ -1,59 +1,61 @@
 ---
-title: How To Set Up Tailwind CSS with the SvelteKit 
-slug: how-to-setup-tailwind-sveltekit 
+title: How To Set Up Tailwind CSS with the SvelteKit
+slug: how-to-setup-tailwind-sveltekit
 image: ./images/main_tailwind_svelte.png
 date: 2021-06-24
 author: youngjae lim
 category: Svelte
-tags: ["sveltekit", "tailwindcss", "css"]
+tags: ['sveltekit', 'tailwindcss', 'css']
 readTime: 10
 ---
 
 import { Link } from 'gatsby'
 import { GatsbyImage, getImage } from 'gatsby-plugin-image'
 
-
 ## Overview
 
 This article will show you how to setup `Tailwind CSS` in a `SvelteKit` project.
 
 ## Steps
+
 1. Set up the project and install `taliwindcss` and its peer dependencies vis npm.
 
-  ```bash
-  npm init svelte@next sveltekit-demo
-  cd sveltekit-demo
-  npm install -D tailwindcss postcss autoprefixer
-  ```
+```bash
+npm init svelte@next sveltekit-demo
+cd sveltekit-demo
+npm install -D tailwindcss postcss autoprefixer
+```
 
 2. Generate `tailwind.config.cjs` and `postcss.config.cjs` configuration files
 
-  ```bash
-  npx tailwind init tailwind.config.cjs -p
-  mv postcss.config.js postcss.config.cjs
-  ```
+```bash
+npx tailwind init tailwind.config.cjs -p
+mv postcss.config.js postcss.config.cjs
+```
 
 3. Configure your template paths in `tailwind.config.cjs`
 
-  ```js file=./tailwind.config.cjs
-  module.exports = {
-    content: ['./src/**/*.{html,js,svelte,ts}'],
-  theme: {
-    extend: {}
-  }
-  ```
+```js file=./tailwind.config.cjs
+module.exports = {
+  content: ['./src/**/*.{html,js,svelte,ts}'],
+theme: {
+  extend: {}
+}
+```
 
 4. Add the Tailwind directives to your CSS
-  - Create a `./src/app.css` file and add the `@tailwind` directives for each of Tailwind's layers.
+
+- Create a `./src/app.css` file and add the `@tailwind` directives for each of Tailwind's layers.
 
   ```css file=./src/app.css
   @tailwind base;
   @tailwind components;
   @tailwind utilities;
   ```
-   
+
 5. Import the CSS file
-  - Create a layout svelte file and import the `app.css` file we've just created in the step 4.
+
+- Create a layout svelte file and import the `app.css` file we've just created in the step 4.
 
   ```jsx file=./src/routes/__layout.svelte
   <script>
@@ -65,19 +67,18 @@ This article will show you how to setup `Tailwind CSS` in a `SvelteKit` project.
 
 6. Run npm development
 
-  ```bash
-  npm run dev
-  ```
+```bash
+npm run dev
+```
 
 7. Try using Tailwind
+
 - Open up `index.svelte` and try this.
 
   ```jsx file=./src/routes/index.svelte
-  <h1 class="font-bold underline">
-    Hello Tailwind!!!
-  </h1>
+  <h1 class='font-bold underline'>Hello Tailwind!!!</h1>
   ```
-  
+
 <Link to='/posts' className='btn center-btn'>
   all posts
 </Link>
