Fixed border radius on fenced code block

--- a/src/posts/2022-03-27-vim-surround/post.mdx
+++ b/src/posts/2022-03-27-vim-surround/post.mdx
@@ -72,7 +72,7 @@ Of course, you can use any characters like "", or '' to wrap the entire line, to
 | This is a line. | `yss"` with the cursor on Vim | "This is a line." |
 | This is a line. | `yss'` with the cursor on Vim | 'This is a line.' |
 
-#### Wrap around tags or text with a new tag in <mark>Visual Mode</mark>
+#### Wrap around tags or text with a new tag in Visual Mode
 
 So far all the commands that we ran work under the <mark>Normal Mode</mark>. What if you want to wrap around the multiple lines of html elements? Here is an example:
 
