--- a/src/posts/2022-02-24-Datasette/post.mdx
+++ b/src/posts/2022-02-24-Datasette/post.mdx
@@ -1,18 +1,19 @@
 ---
 title: Datasette
-slug: datasette 
+slug: datasette
 image: ./images/main.png
 date: 2022-02-24
 author: youngjae lim
+published: true
 category: Data
-tags: ["data", "tool", "python"]
+tags: ['data', 'tool', 'python']
 readTime: 50
 embeddedImages:
   - ./images/html-1.png
   - ./images/html-2.png
   - ./images/html-3.png
 videoSourceURL: https://youtu.be/1npWH0rPOnI
-videoTitle: "Deploying Sites to GitHub Pages using GitHub Actions"
+videoTitle: 'Deploying Sites to GitHub Pages using GitHub Actions'
 ---
 
 import { Link } from 'gatsby'
@@ -41,6 +42,7 @@ sqlite-utils --help
 ```
 
 All options and commands of `sqlite-utils` command:
+
 ```
 
 Usage: sqlite-utils [OPTIONS] COMMAND [ARGS]...
