--- a/src/posts/2022-03-18-Remove-Old-Merged-Git-Branches/post.mdx
+++ b/src/posts/2022-03-18-Remove-Old-Merged-Git-Branches/post.mdx
@@ -1,11 +1,12 @@
 ---
 title: How To Remove Old and Merged Git Branches Easily
-slug: how-to-remove-oldandmerged-git-branches-easily 
+slug: how-to-remove-oldandmerged-git-branches-easily
 image: ./images/main_git_branch.png
 date: 2022-03-18
 author: youngjae lim
-category: Git 
-tags: ["git", "devops", "tool"]
+published: true
+category: Git
+tags: ['git', 'devops', 'tool']
 readTime: 5
 ---
 
@@ -13,7 +14,7 @@ import { Link } from 'gatsby'
 
 ## Overview
 
-Let's say that you do your all of your development on a feature branch in your local repository and push it to the remote repository creating a pull request. Then in your remote repository(say, `GitHub`), you merge the feature branch into main branch after review, then get rid of the feature branch. 
+Let's say that you do your all of your development on a feature branch in your local repository and push it to the remote repository creating a pull request. Then in your remote repository(say, `GitHub`), you merge the feature branch into main branch after review, then get rid of the feature branch.
 
 However, you still have the feature branch in your local repository. If you keep doing this, you will have growing number of feature branches that are no longer needed locally. You need to clean them up and the below is how you do it.
 
