--- a/src/posts/2022-03-20-SvelteKit-Wordpress-CMS/post.mdx
+++ b/src/posts/2022-03-20-SvelteKit-Wordpress-CMS/post.mdx
@@ -4,8 +4,9 @@ slug: sveltekit-with-headless-wordpress-cms
 image: ./images/main_wordpress.png
 date: 2022-03-20
 author: youngjae lim
-category: SvelteKit 
-tags: ["sveltekit", "cms", "wordpress", "graphql"]
+published: true
+category: SvelteKit
+tags: ['sveltekit', 'cms', 'wordpress', 'graphql']
 readTime: 10
 embeddedImages:
   - ./images/install_local_1.png
@@ -47,19 +48,39 @@ Local By FlyWheel is a local web server that allows you to develop your website 
 ## Configure Local
 
 ### Open up the app and click the + icon in the lower-left corner
-<GatsbyImage image={getImage(props.embeddedImages[0])} alt="local by flywheel configuration" />
+
+<GatsbyImage
+  image={getImage(props.embeddedImages[0])}
+  alt='local by flywheel configuration'
+/>
 
 ### Type your name of site you want to build
-<GatsbyImage image={getImage(props.embeddedImages[1])} alt="local by flywheel configuration" />
+
+<GatsbyImage
+  image={getImage(props.embeddedImages[1])}
+  alt='local by flywheel configuration'
+/>
 
 ### Check preffered option and click continue
-<GatsbyImage image={getImage(props.embeddedImages[2])} alt="local by flywheel configuration" />
+
+<GatsbyImage
+  image={getImage(props.embeddedImages[2])}
+  alt='local by flywheel configuration'
+/>
 
 ### Type your wordpress username, password, email and click Add Site
-<GatsbyImage image={getImage(props.embeddedImages[3])} alt="local by flywheel configuration" />
+
+<GatsbyImage
+  image={getImage(props.embeddedImages[3])}
+  alt='local by flywheel configuration'
+/>
 
 If everything goes well, you will be able to see the following information regarding the configured local server.
-<GatsbyImage image={getImage(props.embeddedImages[4])} alt="local by flywheel configuration" />
+
+<GatsbyImage
+  image={getImage(props.embeddedImages[4])}
+  alt='local by flywheel configuration'
+/>
 
 Please click `Admin` button in the top right corner to open up `wp-admin` login page in the web browser.
 
@@ -67,21 +88,42 @@ Please click `Admin` button in the top right corner to open up `wp-admin` login 
 
 Use your username and password that you've set above to log in to wordpress admin panel.
 
-<GatsbyImage image={getImage(props.embeddedImages[5])} alt="local by flywheel configuration" />
-<GatsbyImage image={getImage(props.embeddedImages[6])} alt="local by flywheel configuration" />
+<GatsbyImage
+  image={getImage(props.embeddedImages[5])}
+  alt='local by flywheel configuration'
+/>
+<GatsbyImage
+  image={getImage(props.embeddedImages[6])}
+  alt='local by flywheel configuration'
+/>
 
 ### Create a couple of dummy posts in the `wp-admin` dashboard
 
 Click `Posts` and `Add New`. Creating a post is very intuitive and make sure you also set featuredImage so that we can render an image for each post in the front-end application.
 
-<GatsbyImage image={getImage(props.embeddedImages[7])} alt="local by flywheel configuration" />
-<GatsbyImage image={getImage(props.embeddedImages[20])} alt="local by flywheel configuration" />
-<GatsbyImage image={getImage(props.embeddedImages[8])} alt="local by flywheel configuration" />
+<GatsbyImage
+  image={getImage(props.embeddedImages[7])}
+  alt='local by flywheel configuration'
+/>
+<GatsbyImage
+  image={getImage(props.embeddedImages[20])}
+  alt='local by flywheel configuration'
+/>
+<GatsbyImage
+  image={getImage(props.embeddedImages[8])}
+  alt='local by flywheel configuration'
+/>
 
-## Install `WPGraphQL` plugin 
+## Install `WPGraphQL` plugin
 
-<GatsbyImage image={getImage(props.embeddedImages[9])} alt="local by flywheel configuration" />
-<GatsbyImage image={getImage(props.embeddedImages[10])} alt="local by flywheel configuration" />
+<GatsbyImage
+  image={getImage(props.embeddedImages[9])}
+  alt='local by flywheel configuration'
+/>
+<GatsbyImage
+  image={getImage(props.embeddedImages[10])}
+  alt='local by flywheel configuration'
+/>
 
 Click `Install` button and then `Activate` button as well.
 
@@ -89,13 +131,19 @@ Click `Install` button and then `Activate` button as well.
 
 Now you will be able to see `GraphQL` menu from the left panel. Hover your mouse over the `GraphQL` menu and click `Settings`:
 
-<GatsbyImage image={getImage(props.embeddedImages[11])} alt="local by flywheel configuration" />
+<GatsbyImage
+  image={getImage(props.embeddedImages[11])}
+  alt='local by flywheel configuration'
+/>
 
 You will be able to find your graphql endpoint:
 
 In my case, it is `http://sveltekitwordpressdemo.local/graphql`. This endpoint will be used later in SvelteKit to make our HTTP POST request to send our graphql query and retreive data we want.
 
-<GatsbyImage image={getImage(props.embeddedImages[12])} alt="local by flywheel configuration" />
+<GatsbyImage
+  image={getImage(props.embeddedImages[12])}
+  alt='local by flywheel configuration'
+/>
 
 Now that we've set up everything we need in the local wordpress server, let's get started with creating a new SvelteKit project.
 
@@ -114,76 +162,76 @@ npm run dev -- --open
 
 ```css file=./src/layout.css
 :root {
-	--border-radius: 8px;
+  --border-radius: 8px;
 
-	/* Colors */
-	--color-white: #fff;
-	--color-gray-1: #102a43;
-	--color-gray-2: #243b53;
-	--color-gray-3: #334e68;
-	--color-gray-4: #486581;
-	--color-gray-5: #627d98;
-	--color-gray-6: #829ab1;
-	--color-gray-7: #9fb3c8;
-	--color-gray-8: #bcccdc;
-	--color-gray-9: #d9e2ec;
-	--color-gray-10: #f0f4f8;
-	--color-yellow-1: #8d2b0b;
-	--color-yellow-2: #b44d12;
-	--color-yellow-3: #cb6e17;
-	--color-yellow-4: #de911d;
-	--color-yellow-5: #f0b429;
-	--color-yellow-6: #f7c948;
-	--color-yellow-7: #fadb5f;
-	--color-yellow-8: #fce588;
-	--color-yellow-9: #fff3c4;
-	--color-yellow-10: #fffbea;
+  /* Colors */
+  --color-white: #fff;
+  --color-gray-1: #102a43;
+  --color-gray-2: #243b53;
+  --color-gray-3: #334e68;
+  --color-gray-4: #486581;
+  --color-gray-5: #627d98;
+  --color-gray-6: #829ab1;
+  --color-gray-7: #9fb3c8;
+  --color-gray-8: #bcccdc;
+  --color-gray-9: #d9e2ec;
+  --color-gray-10: #f0f4f8;
+  --color-yellow-1: #8d2b0b;
+  --color-yellow-2: #b44d12;
+  --color-yellow-3: #cb6e17;
+  --color-yellow-4: #de911d;
+  --color-yellow-5: #f0b429;
+  --color-yellow-6: #f7c948;
+  --color-yellow-7: #fadb5f;
+  --color-yellow-8: #fce588;
+  --color-yellow-9: #fff3c4;
+  --color-yellow-10: #fffbea;
 
-	/* Box Shadows */
-	--box-shadow-1: rgba(0, 0, 0, 0.2) 0px 2px 1px -1px, rgba(0, 0, 0, 0.14) 0px 1px 1px 0px,
-		rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
-	--box-shadow-2: rgba(0, 0, 0, 0.2) 0px 3px 1px -2px, rgba(0, 0, 0, 0.14) 0px 2px 2px 0px,
-		rgba(0, 0, 0, 0.12) 0px 1px 5px 0px;
-	--box-shadow-3: rgba(0, 0, 0, 0.2) 0px 3px 3px -2px, rgba(0, 0, 0, 0.14) 0px 3px 4px 0px,
-		rgba(0, 0, 0, 0.12) 0px 1px 8px 0px;
-	--box-shadow-4: rgba(0, 0, 0, 0.2) 0px 2px 4px -1px, rgba(0, 0, 0, 0.14) 0px 4px 5px 0px,
-		rgba(0, 0, 0, 0.12) 0px 1px 10px 0px;
-	--box-shadow-5: rgba(0, 0, 0, 0.2) 0px 3px 5px -1px, rgba(0, 0, 0, 0.14) 0px 5px 8px 0px,
-		rgba(0, 0, 0, 0.12) 0px 1px 14px 0px;
-	--box-shadow-6: rgba(0, 0, 0, 0.2) 0px 3px 5px -1px, rgba(0, 0, 0, 0.14) 0px 6px 10px 0px,
-		rgba(0, 0, 0, 0.12) 0px 1px 18px 0px;
-	--box-shadow-7: rgba(0, 0, 0, 0.2) 0px 4px 5px -2px, rgba(0, 0, 0, 0.14) 0px 7px 10px 1px,
-		rgba(0, 0, 0, 0.12) 0px 2px 16px 1px;
-	--box-shadow-8: rgba(0, 0, 0, 0.2) 0px 5px 5px -3px, rgba(0, 0, 0, 0.14) 0px 8px 10px 1px,
-		rgba(0, 0, 0, 0.12) 0px 3px 14px 2px;
-	--box-shadow-9: rgba(0, 0, 0, 0.2) 0px 5px 6px -3px, rgba(0, 0, 0, 0.14) 0px 9px 12px 1px,
-		rgba(0, 0, 0, 0.12) 0px 3px 16px 2px;
-	--box-shadow-10: rgba(0, 0, 0, 0.2) 0px 6px 6px -3px, rgba(0, 0, 0, 0.14) 0px 10px 14px 1px,
-		rgba(0, 0, 0, 0.12) 0px 4px 18px 3px;
-	--box-shadow-11: rgba(0, 0, 0, 0.2) 0px 6px 7px -4px, rgba(0, 0, 0, 0.14) 0px 11px 15px 1px,
-		rgba(0, 0, 0, 0.12) 0px 4px 20px 3px;
-	--box-shadow-12: rgba(0, 0, 0, 0.2) 0px 7px 8px -4px, rgba(0, 0, 0, 0.14) 0px 12px 17px 2px,
-		rgba(0, 0, 0, 0.12) 0px 5px 22px 4px;
-	--box-shadow-13: rgba(0, 0, 0, 0.2) 0px 7px 8px -4px, rgba(0, 0, 0, 0.14) 0px 13px 19px 2px,
-		rgba(0, 0, 0, 0.12) 0px 5px 24px 4px;
-	--box-shadow-14: rgba(0, 0, 0, 0.2) 0px 7px 9px -4px, rgba(0, 0, 0, 0.14) 0px 14px 21px 2px,
-		rgba(0, 0, 0, 0.12) 0px 5px 26px 4px;
-	--box-shadow-15: rgba(0, 0, 0, 0.2) 0px 8px 9px -5px, rgba(0, 0, 0, 0.14) 0px 15px 22px 2px,
-		rgba(0, 0, 0, 0.12) 0px 6px 28px 5px;
+  /* Box Shadows */
+  --box-shadow-1: rgba(0, 0, 0, 0.2) 0px 2px 1px -1px, rgba(0, 0, 0, 0.14) 0px 1px
+      1px 0px, rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
+  --box-shadow-2: rgba(0, 0, 0, 0.2) 0px 3px 1px -2px, rgba(0, 0, 0, 0.14) 0px 2px
+      2px 0px, rgba(0, 0, 0, 0.12) 0px 1px 5px 0px;
+  --box-shadow-3: rgba(0, 0, 0, 0.2) 0px 3px 3px -2px, rgba(0, 0, 0, 0.14) 0px 3px
+      4px 0px, rgba(0, 0, 0, 0.12) 0px 1px 8px 0px;
+  --box-shadow-4: rgba(0, 0, 0, 0.2) 0px 2px 4px -1px, rgba(0, 0, 0, 0.14) 0px 4px
+      5px 0px, rgba(0, 0, 0, 0.12) 0px 1px 10px 0px;
+  --box-shadow-5: rgba(0, 0, 0, 0.2) 0px 3px 5px -1px, rgba(0, 0, 0, 0.14) 0px 5px
+      8px 0px, rgba(0, 0, 0, 0.12) 0px 1px 14px 0px;
+  --box-shadow-6: rgba(0, 0, 0, 0.2) 0px 3px 5px -1px, rgba(0, 0, 0, 0.14) 0px 6px
+      10px 0px, rgba(0, 0, 0, 0.12) 0px 1px 18px 0px;
+  --box-shadow-7: rgba(0, 0, 0, 0.2) 0px 4px 5px -2px, rgba(0, 0, 0, 0.14) 0px 7px
+      10px 1px, rgba(0, 0, 0, 0.12) 0px 2px 16px 1px;
+  --box-shadow-8: rgba(0, 0, 0, 0.2) 0px 5px 5px -3px, rgba(0, 0, 0, 0.14) 0px 8px
+      10px 1px, rgba(0, 0, 0, 0.12) 0px 3px 14px 2px;
+  --box-shadow-9: rgba(0, 0, 0, 0.2) 0px 5px 6px -3px, rgba(0, 0, 0, 0.14) 0px 9px
+      12px 1px, rgba(0, 0, 0, 0.12) 0px 3px 16px 2px;
+  --box-shadow-10: rgba(0, 0, 0, 0.2) 0px 6px 6px -3px, rgba(0, 0, 0, 0.14) 0px 10px
+      14px 1px, rgba(0, 0, 0, 0.12) 0px 4px 18px 3px;
+  --box-shadow-11: rgba(0, 0, 0, 0.2) 0px 6px 7px -4px, rgba(0, 0, 0, 0.14) 0px 11px
+      15px 1px, rgba(0, 0, 0, 0.12) 0px 4px 20px 3px;
+  --box-shadow-12: rgba(0, 0, 0, 0.2) 0px 7px 8px -4px, rgba(0, 0, 0, 0.14) 0px 12px
+      17px 2px, rgba(0, 0, 0, 0.12) 0px 5px 22px 4px;
+  --box-shadow-13: rgba(0, 0, 0, 0.2) 0px 7px 8px -4px, rgba(0, 0, 0, 0.14) 0px 13px
+      19px 2px, rgba(0, 0, 0, 0.12) 0px 5px 24px 4px;
+  --box-shadow-14: rgba(0, 0, 0, 0.2) 0px 7px 9px -4px, rgba(0, 0, 0, 0.14) 0px 14px
+      21px 2px, rgba(0, 0, 0, 0.12) 0px 5px 26px 4px;
+  --box-shadow-15: rgba(0, 0, 0, 0.2) 0px 8px 9px -5px, rgba(0, 0, 0, 0.14) 0px 15px
+      22px 2px, rgba(0, 0, 0, 0.12) 0px 6px 28px 5px;
 }
 
 html,
 body {
-	padding: 0;
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
-		Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-	background-color: #f0f4f8;
-	color: var(--color-gray-2);
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
+    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #f0f4f8;
+  color: var(--color-gray-2);
 }
 
 a {
-	color: inherit;
+  color: inherit;
 }
 ```
 
@@ -213,19 +261,26 @@ a {
 
 Create `.env.local` file in your project root directory and type `VITE_PUBLIC_WORDPRESS_API_URL=`. Then copy and paste the graphql endpoint that we've seen in the `WPGraphQL` Settings in the `wp-admin` panel.
 
-<GatsbyImage image={getImage(props.embeddedImages[13])} alt="local by flywheel configuration" />
+<GatsbyImage
+  image={getImage(props.embeddedImages[13])}
+  alt='local by flywheel configuration'
+/>
 
 ## Blog Page
 
 ### Run a graphql query from `GraphiQL IDE` in the wordpress admin panel
 
 When you work with graphql, a typical way to develop is:
-  1. Make a query in the `GraphiQL IDE` tool and make sure it returns a resulting data. 
-  2. Then you will copy the query and use it as a query variable in the one of those `Svelte` files that will render a page in your web application. 
+
+1. Make a query in the `GraphiQL IDE` tool and make sure it returns a resulting data.
+2. Then you will copy the query and use it as a query variable in the one of those `Svelte` files that will render a page in your web application.
 
 Go back to `wp-admin` panel and open up `GraphiQL IDE` and click `Query Composer`. You can drill down `posts` item and select the items as they appear in the following screen capture. Once you selected items you want, you can click the `play` button to see the resulting data that we would like to want from our SvelteKit front-end application.
 
-<GatsbyImage image={getImage(props.embeddedImages[14])} alt="local by flywheel configuration" />
+<GatsbyImage
+  image={getImage(props.embeddedImages[14])}
+  alt='local by flywheel configuration'
+/>
 
 ### Create a svelte file to render a Blog page
 
@@ -319,7 +374,10 @@ npm run dev -- --open
 
 You will be able to see the `blog` page loaded when you access `localhost:3000/blog`
 
-<GatsbyImage image={getImage(props.embeddedImages[15])} alt="local by flywheel configuration" />
+<GatsbyImage
+  image={getImage(props.embeddedImages[15])}
+  alt='local by flywheel configuration'
+/>
 
 ## Make card component
 
@@ -367,10 +425,11 @@ Create a PostCard component:
 ```
 
 Because we want to use this component in the Blog page, we have to make a change in the `./src/routes/blog/index.svelte` file:
+
 - Import PostCard component (line 50)
 - Replace `<p>` tag with `<PostCard {post} />` (line 59, 60)
 
-```jsx file=./src/routes/blog/index.svelte delete=59 add=50,60  
+```jsx file=./src/routes/blog/index.svelte delete=59 add=50,60
 <script context="module">
   const query = `
     query getPosts {
@@ -451,7 +510,10 @@ Because we want to use this component in the Blog page, we have to make a change
 
 Now when you check the Blog page again, you should see the blog posts rendered in a card format.
 
-<GatsbyImage image={getImage(props.embeddedImages[16])} alt="local by flywheel configuration" />
+<GatsbyImage
+  image={getImage(props.embeddedImages[16])}
+  alt='local by flywheel configuration'
+/>
 
 ## Individual Post Page
 
@@ -461,7 +523,10 @@ However, we can't click an individual blog card to see the detail post yet. To b
 
 You can run the following graphql query from the `GraphiQL IDE` in the `wp-admin` panel:
 
-<GatsbyImage image={getImage(props.embeddedImages[17])} alt="local by flywheel configuration" />
+<GatsbyImage
+  image={getImage(props.embeddedImages[17])}
+  alt='local by flywheel configuration'
+/>
 
 ### Make a svelte file to render each post.
 
@@ -576,7 +641,10 @@ Create `./src/routes/blog/[slug].svelte`:
 
 Now that the dynamic routes are all set, we can click the individual post to see the detail contents:
 
-<GatsbyImage image={getImage(props.embeddedImages[18])} alt="local by flywheel configuration" />
+<GatsbyImage
+  image={getImage(props.embeddedImages[18])}
+  alt='local by flywheel configuration'
+/>
 
 ## Adding a Podcast Player
 
@@ -633,7 +701,10 @@ Render this component in the layout svelte file.
 
 As you see, the podcast player appears in the bottom of every page that you navigate to.
 
-<GatsbyImage image={getImage(props.embeddedImages[19])} alt="local by flywheel configuration" />
+<GatsbyImage
+  image={getImage(props.embeddedImages[19])}
+  alt='local by flywheel configuration'
+/>
 
 <Link to='/posts' className='btn center-btn'>
   all posts
