--- a/src/posts/2022-03-24-Useful-Vim-Commands/post.mdx
+++ b/src/posts/2022-03-24-Useful-Vim-Commands/post.mdx
@@ -4,6 +4,7 @@ slug: vim-commands-part-1-moving-around
 image: ./images/main_vim.png
 date: 2022-03-24
 author: youngjae lim
+published: true
 category: Vim
 tags: ['vim', 'tool']
 readTime: 10
