--- a/src/posts/2022-03-25-Utterances/post.mdx
+++ b/src/posts/2022-03-25-Utterances/post.mdx
@@ -4,6 +4,7 @@ slug: how-to-add-utterances-to-gatsby-blog
 image: ./images/main_utterances.png
 date: 2022-03-25
 author: youngjae lim
+published: true
 category: Gatsby
 tags:
   ['gatsby', 'react', 'tool', 'utterances', 'widget', 'github', 'github issues']
@@ -104,6 +105,7 @@ The above setting definitely works in the dev environment, but how about product
 1. Because we are not pushing our `.env` file to the remote repository by adding `.env` to the `.gitignore` file, we have to add one manually to our Github repository **Settings**:
 
 {' '}
+
 <blockquote display='warning'>
   Note that pushing .env file with sensitive data to a remote repository is
   always dangerous practive, so it should be avoided.
