--- a/src/posts/2022-03-26-Social-Share-Buttons/post.mdx
+++ b/src/posts/2022-03-26-Social-Share-Buttons/post.mdx
@@ -4,6 +4,7 @@ slug: how-to-add-social-share-buttons-to-gatsby-blog
 image: ./images/main_social_share_buttons.png
 date: 2022-03-26
 author: youngjae lim
+published: true
 category: Gatsby
 tags: ['gatsby', 'ui']
 readTime: 10
