--- a/src/posts/2022-03-27-vim-surround/post.mdx
+++ b/src/posts/2022-03-27-vim-surround/post.mdx
@@ -4,6 +4,7 @@ slug: vim-plugin-series-1-surround-vim
 image: ./images/main_vim_surround.png
 date: 2022-03-27
 author: youngjae lim
+published: true
 category: Vim
 tags: ['vim', 'tool']
 readTime: 10
