--- a/src/posts/2022-04-01-Pass-Data-From-Layout-To-Pages/post.mdx
+++ b/src/posts/2022-04-01-Pass-Data-From-Layout-To-Pages/post.mdx
@@ -4,6 +4,7 @@ slug: data-from-endpoint-to-layouts-to-pages-in-sveltekit
 image: ./images/main_sveltekit.png
 date: 2022-04-01
 author: youngjae lim
+published: true
 category: SvelteKit
 tags: ['sveltekit', 'front-end']
 readTime: 10
