--- a/src/posts/2022-04-02-Pass-Data-In-SvelteKit/post.mdx
+++ b/src/posts/2022-04-02-Pass-Data-In-SvelteKit/post.mdx
@@ -4,6 +4,7 @@ slug: how-to-pass-data-from-pages-to-descendant-pages-in-sveltekit
 image: ./images/main_sveltekit.png
 date: 2022-04-02
 author: youngjae lim
+published: true
 category: SvelteKit
 tags: ['sveltekit', 'front-end']
 readTime: 10
